[package]
name = "subduction-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
sedimentree_core = { path = "../subduction/sedimentree_core", features = ["serde"] }

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.js-sys]
version = "0.3"

[dependencies.wasm-bindgen-futures]
version = "0.4"

