[package]
name = "subduction_wasm"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde = { workspace = true, features = ["derive" ] }
serde_json = "1.0"
js-sys = "0.3"
hex = { workspace = true }
serde-wasm-bindgen = "0.6"
futures = { workspace = true }

sedimentree_core = { path = "../sedimentree_core", features = ["serde"] }
subduction_core = { path = "../subduction_core", features = ["serde"] }

[features]
default = []
